ajout d'images : compromis biais variance

--- a/inst/diapoML/biblioML.bib
+++ b/inst/diapoML/biblioML.bib
@@ -6,3 +6,10 @@
   edition = {1ère},
   isbn = {978-2-7381-4931-2}
 }
+
+@online{classrooms1,
+  author = {Azencott, Chloé-Agathe},
+  title = {Evaluez les performances d'un modèle de machine learning},
+  year = {2024},
+  url = {https://openclassrooms.com/fr/courses/4297211-evaluez-les-performances-dun-modele-de-machine-learning/4297218-comprenez-ce-qui-fait-un-bon-modele-d-apprentissage}
+}
