--- a/inst/exerciceML/exerciceML.qmd
+++ b/inst/exerciceML/exerciceML.qmd
@@ -6,6 +6,8 @@ editor: visual
 
 ## Partie 1 : Classification supervisée
 
+***Mise en situation 1 :** vous avez été embauché par le CIVB (comité interprofessionnel des vins de Bordeaux) pour mettre en place un algorithme qui permet de prévoir la qualité du vin en fonction de sa composition chimique. Vous disposez d'une base de données brute avec des références de vins de Bordeaux, chacune ayant été notée par des professionnel avec une note entre 1 et 10. A partir de 6, le vin est considéré comme bon, en dessous de 6, il est considéré comme mauvais.*
+
 *Etape 1 : Dans l'onglet "données" : cliquer pour explorer la base de données sur les vins.*
 
 ### Combien d'individus dans la base de donnéees brute vins ?
@@ -86,7 +88,7 @@ Spécificité : 67 %
 
 *Etape 8 : Ajuster la forêt aléatoire sur la base d'entraînement (dans l'onglet validation) et evaluer la performance du modèle.*
 
-### Combien d'arbres ont été construits par défaut par l'algorithme ? 
+### Combien d'arbres ont été construits par défaut par l'algorithme ?
 
 Par défaut, l'algorithme construit 500 arbres de classification.
 
@@ -97,7 +99,7 @@ Chaque arbre est constitué par défaut de 3 variables tirées aléatoirement. I
 ### Noter les indicateurs dans le tableau comparatif des modèles
 
 | Modèles                              | Exactitude | Sensibilité | Spécificité |
-|------------------------------|--------------|--------------|--------------|
+|---------------------------|---------------|---------------|---------------|
 | *Modèle 1 : Regression logistique*   | 77 %       | 90 %        | 52 %        |
 | *Modèle 2 : arbre de classification* | 76 %       | 80 %        | 67 %        |
 | *Modèle 3 : forêt aléatoire*         | 83 %       | 90 %        | 70 %        |
@@ -112,7 +114,7 @@ Etape 9 : *Ajuster le KNN (modèle des plus proches voisins) sur la base d'entra
 ### Noter les indicateurs dans le tableau comparatif des modèles
 
 | Modèle retenu                        | Exactitude | Sensibilité | Spécificité | AUC  |
-|------------------------------|-----------|-----------|-----------|---------|
+|-----------------------|------------|------------|------------|------------|
 | *Modèle 1 : Regression logistique*   | 77 %       | 90 %        | 52 %        | 0,83 |
 | *Modèle 2 : arbre de classification* | 76 %       | 80 %        | 67 %        | 0,77 |
 | *Modèle 3 : forêt aléatoire*         | 83 %       | 90 %        | 70 %        | 0,89 |
@@ -122,17 +124,23 @@ Etape 9 : *Ajuster le KNN (modèle des plus proches voisins) sur la base d'entra
 
 *Etape 10 : Sélectionner le modèle le plus performant que vous avez retenu précemment (dans l'onglet "modèle"), et dans l'onglet "généralisation", ajuster le modèle.*
 
-### La base de test a-t-elle été utilisée pour construire le modèle final ? 
+### La base de test a-t-elle été utilisée pour construire le modèle final ?
 
 Non ! Le modèle final s'ajuste sur la base d'entraînement (70 % des données) et sur la base de validation (15 % des données).
 
+***Mise en situation 2 :** Vous êtes le gouverneur de Grandile, la plus grande île de l'archipel de Ceph'ile. Vous disposez d'une base de données avec des informations sur 5 418 ménages habitants à Grandile, et notamment vous savez si ce ménage est pauvre ou non. Vous voulez être en capacité de prédire si un nouveau ménage est pauvre à partir des informations socio-économiques que vous aurez collecté.*
+
 | Modèle retenu                        | Exactitude | Sensibilité | Spécificité | AUC  |
-|-------------------------|------------|------------|------------|------------|
+|--------------------|-------------|-------------|-------------|-------------|
 | *Modèle 1 : Regression logistique*   | 99 %       | 100 %       | 98 %        | 1    |
 | *Modèle 2 : arbre de classification* | 99 %       | 100 %       | 94 %        | 0,98 |
-| *Modèle 3 : forêt aléatoire*         | 99 %       | 100 %       | 96 %        | 1    |
+| *Modèle 3 : forêt aléatoire*         | 99 %       | 100 %       | 98 %        | 1    |
 | *Modèle 4 : KNN*                     | 99 %       | 99 %        | 98 %        | 1    |
 
-: Comparaison des performances des modèles sur la base de données Grandile.
+: Comparaison des performances des modèles sur la base de données Grandile (modèle ajusté sur 70% de la base brute, les indicateurs sont calculés à partir des prédictions sur la base de validation).
 
-## Partie 2 : Regression supervisée
+### Y a t il un modèle nettement plus performant que les autres pour prédire si un ménage est pauvre à Grandile ?
+
+### Quel autre critère peut entrer en jeu dans le choix d'un modèle avant de le généraliser ?
+
+## Partie 2 : Régression supervisée
